--- a/Week2/style.css
+++ b/Week2/style.css
@@ -1,4 +1,8 @@
-.h4-tag {
-    background-color: tomato;
-    
+.hello {
+    background-color: orange;
+}
+
+.hello:hover {
+    color: blue;
+    cursor: pointer;
 }
